--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,24 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    
+    <!-- Colores principales del tema -->
+    <color name="primary_blue">#2E86AB</color>
+    <color name="primary_blue_light">#A23B72</color>
+    <color name="accent_orange">#F18F01</color>
+    
+    <!-- Colores de texto -->
+    <color name="text_primary">#1A252F</color>
+    <color name="text_secondary">#5D6D7E</color>
+    <color name="text_tertiary">#85929E</color>
+    
+    <!-- Colores de fondo -->
+    <color name="background_light">#FBFCFD</color>
+    <color name="background_card">#FFFFFF</color>
+    <color name="background_overlay">#F4F6F8</color>
+    
+    <!-- Colores de estado -->
+    <color name="success_green">#2ECC71</color>
+    <color name="warning_yellow">#F39C12</color>
+    <color name="error_red">#E74C3C</color>
 </resources>
