--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#FBFCFD"
+        android:type="linear"
+        android:startColor="#F8F9FA"
         android:centerColor="#FFFFFF"
-        android:endColor="#F4F6F8"
+        android:endColor="#E9ECEF"
         android:angle="135" />
 </shape>
