--- a/app/src/main/res/drawable/indicator_active.xml
+++ b/app/src/main/res/drawable/indicator_active.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <solid android:color="#3498DB" />
+    android:shape="rectangle">
+    
+    <gradient
+        android:startColor="#4A90E2"
+        android:endColor="#357ABD"
+        android:angle="45" />
+    
+    <corners android:radius="8dp" />
+    
     <size
-        android:width="8dp"
+        android:width="24dp"
         android:height="8dp" />
+        
 </shape>
