--- a/app/src/main/res/drawable/indicator_inactive.xml
+++ b/app/src/main/res/drawable/indicator_inactive.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#E0E0E0" />
+    
+    <solid android:color="#60FFFFFF" />
+    
+    <stroke
+        android:width="1dp"
+        android:color="#40FFFFFF" />
+    
     <size
         android:width="8dp"
         android:height="8dp" />
+        
 </shape>
