--- a/app/src/main/res/layout/activity_pantalla_carga.xml
+++ b/app/src/main/res/layout/activity_pantalla_carga.xml
@@ -12,8 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/pantalla_carga"
-        android:scaleType="centerCrop"
-        android:contentDescription="@string/background_image" />
+        android:scaleType="centerCrop" />
 
     <!-- App Logo -->
     <ImageView
