--- a/app/src/main/res/layout/activity_mis_servicios_comunicados.xml
+++ b/app/src/main/res/layout/activity_mis_servicios_comunicados.xml
@@ -34,7 +34,7 @@
             android:layout_height="50dp"
             android:layout_weight="1"
             android:gravity="start|center_vertical"
-            android:text="Comunidades"
+            android:text="Comunicados"
             android:textColor="@color/black"
             android:textSize="25sp"
             android:textStyle="bold" />
@@ -88,7 +88,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="8dp"
-            android:text="Lista de comunidades"
+            android:text="Lista de comunicados"
             android:textColor="#666666"
             android:textSize="20sp"
             android:textStyle="bold"
