Adjuntando partes completo

--- a/app/src/main/res/layout/activity_mis_servicios_horario.xml
+++ b/app/src/main/res/layout/activity_mis_servicios_horario.xml
@@ -126,7 +126,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:cardElevation="4dp"
+            app:cardElevation="4dp"
             android:radius="6dp"
             app:cardBackgroundColor="@android:color/white"
             app:cardCornerRadius="12dp"
@@ -175,7 +175,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
-            android:cardElevation="4dp"
+            app:cardElevation="4dp"
             android:radius="6dp"
             app:cardBackgroundColor="@android:color/white"
             app:cardCornerRadius="12dp"
@@ -224,7 +224,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:cardElevation="4dp"
+            app:cardElevation="4dp"
             android:radius="6dp"
             app:cardBackgroundColor="@android:color/white"
             app:cardCornerRadius="12dp"
@@ -273,7 +273,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
-            android:cardElevation="4dp"
+            app:cardElevation="4dp"
             android:radius="6dp"
             app:cardBackgroundColor="@android:color/white"
             app:cardCornerRadius="12dp"
