--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,7 @@
     <color name="primary_green">#10B981</color>
     <color name="background_light">#FAFBFC</color>
     <color name="divider_light">#E5E7EB</color>
+
+    <!-- Color de fondo para el ícono -->
+    <color name="ic_launcher_background">#FFFFFF</color>
 </resources>
