Pantallas Registro Colaborador y Configurar Alertas
Actualización de Pantallas: Registro de Colaborador y Configuración de Alertas.

Formularios con validación y funciones básicas.

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,4 +4,9 @@
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <!-- Otros atributos -->
+        <item name="colorControlNormal">#D5D7DA</item>
+        <item name="colorControlActivated">#0369A1</item>
+    </style>
 </resources>
