--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,10 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
-
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <!-- Otros atributos -->
+        <item name="colorControlNormal">#D5D7DA</item>
+        <item name="colorControlActivated">#0369A1</item>
+    </style>
     <style name="Theme.AsistenciaIntegrador" parent="Base.Theme.AsistenciaIntegrador" />
 </resources>
