--- a/app/src/main/res/layout/activity_pantalla_registrar_colaborador.xml
+++ b/app/src/main/res/layout/activity_pantalla_registrar_colaborador.xml
@@ -103,66 +103,66 @@
                 android:padding="12dp" />
 
             <!-- Campo: Doc. del colaborador -->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="0dp"
-            android:background="@drawable/bg_container"
-            android:gravity="start"
-            android:orientation="horizontal">
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="5dp"
                 android:background="@drawable/bg_container"
-                android:gravity="start"
-                android:orientation="vertical"
-                android:paddingBottom="0dp">
+                android:padding="8dp">
 
-                <TextView
-                    android:id="@+id/tvTipoDoc"
-                    android:layout_width="wrap_content"
+                <!-- Tipo Doc -->
+                <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Tipo Doc."
-                    android:textSize="16sp" />
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
-                <Spinner
-                    android:id="@+id/spinnerDoc"
-                    android:layout_width="wrap_content"
+                    <TextView
+                        android:id="@+id/tvTipoDoc"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Tipo Doc."
+                        android:textSize="16sp" />
+
+                    <Spinner
+                        android:id="@+id/spinnerDoc"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:background="@drawable/bg_input"
+                        android:padding="12dp"
+                        android:spinnerMode="dropdown" />
+                </LinearLayout>
+
+                <!-- Número Doc -->
+                <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:background="@drawable/bg_input"
-                    android:padding="12dp"
-                    android:spinnerMode="dropdown" />
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:layout_marginStart="16dp">
+
+                    <TextView
+                        android:id="@+id/tvNumDoc"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="N° de Documento"
+                        android:textSize="16sp" />
+
+                    <EditText
+                        android:id="@+id/etNumDoc"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:background="@drawable/bg_input"
+                        android:hint="70707070"
+                        android:textSize="14sp"
+                        android:padding="14dp"
+                        android:inputType="number" />
+                </LinearLayout>
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="0dp"
-                android:background="@drawable/bg_container"
-                android:gravity="start"
-                android:orientation="vertical"
-                android:paddingBottom="0dp">
-                <TextView
-                    android:id="@+id/tvNumDoc"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="N° de Documento"
-                    android:textSize="16sp" />
 
-                <EditText
-                    android:id="@+id/etNumDoc"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:background="@drawable/bg_input"
-                    android:hint="70707070"
-                    android:textSize="14sp"
-                    android:padding="14dp"
-                    android:ems="10"
-                    android:inputType="number" />
-            </LinearLayout>
-        </LinearLayout>
 
 
             <!-- Campo: Correo del colaborador -->
@@ -256,7 +256,6 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="0dp"
-                android:layout_marginRight="10dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/bg_dashed_box"
                 android:foregroundGravity="center"
@@ -275,8 +274,7 @@
                     android:id="@+id/frameImagen2"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_marginStart="0dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="8dp"
                     android:background="@drawable/bg_dashed_box"
                     android:foregroundGravity="center"
@@ -295,8 +293,7 @@
                     android:id="@+id/frameImagen3"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_marginStart="0dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="8dp"
                     android:background="@drawable/bg_dashed_box"
                     android:foregroundGravity="center"
@@ -315,8 +312,7 @@
                     android:id="@+id/frameImagen4"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_marginStart="0dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="8dp"
                     android:background="@drawable/bg_dashed_box"
                     android:foregroundGravity="center"
@@ -335,8 +331,7 @@
                     android:id="@+id/frameImagen5"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_marginStart="0dp"
-                    android:layout_marginRight="0dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="8dp"
                     android:background="@drawable/bg_dashed_box"
                     android:foregroundGravity="center"
