--- a/app/src/main/res/layout/activity_pantalla_guardia_lista_de_asistencia.xml
+++ b/app/src/main/res/layout/activity_pantalla_guardia_lista_de_asistencia.xml
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="Lista de Asistencia"
+            android:text="Lista de Empleados"
             android:textSize="16sp"
             android:textStyle="bold" />
 
